devel
-----

* APM-256: make arangoexport escape potential formulae in CSV exports.
  This addresses a potential security issue when exporting specially
  crafted documents to CSV, opening the CSV file in MS Excel or OpenOffice
  and then clicking links in any of the tainted cells.
  
  This change also adds a new option `--escape-csv-formulae` to
  toggle the escaping behavior for potential formulae values. The
  option is turned on by default.

* Second step of hotbackup transfer job cleanup. Now locks are also cleaned up
  as well as old, seemingly unfinished jobs.

* Defer intermediate commits in the middle of a multi-document (array)
  operation. This is to ensure that the RocksDB key locks for all participating
  document keys are still held while the operations are replicating via the
  synchronous replication.

* Fix potential read inconsistency for single document operations.
  Wen reading a single document that is concurrently being updated or replaced,
  the read operation could erroneously return a "document not found" error
  although the document actually existed. This only happened for single
  document operations, i.e., no transactions or AQL queries.

* Fix GitHub issue #15084. Fixed a potential use-after-free on Windows for
  queries that used the NeighborsEnumerator (though other PathEnumerators
  might have been affected as well).

* Cleanup and properly fail hotbackup upload and download jobs if a dbserver
  fails or is restarted during the transfer. This gets rid of upload and
  download blockages in these circumstances.

* Added new option `--custom-query-bindvars` to arangobench, so queries given via 
  option `--custom-query` can have bind variables in them.

* BTS-624: The `move-calculations-up` optimization rule is now also applied to
  subqueries, when they don't have dependencies on the outer nodes, don't have
  modification nodes and don't read their own writes. This fixed the execution